gen/org/intellij/knd/parser/KndParser.java
// This is a generated file. Not intended for manual editing.
package org.intellij.knd.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.knd.psi.KndTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class KndParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == C_ABSTRACT_DECLARATOR) {
      r = C_ABSTRACT_DECLARATOR(b, 0);
    }
    else if (t == C_ADDITIVE_EXPRESSION) {
      r = C_ADDITIVE_EXPRESSION(b, 0);
    }
    else if (t == C_ALIGNMENT_SPECIFIER) {
      r = C_ALIGNMENT_SPECIFIER(b, 0);
    }
    else if (t == C_AND_EXPRESSION) {
      r = C_AND_EXPRESSION(b, 0);
    }
    else if (t == C_ARGUMENT_EXPRESSION_LIST) {
      r = C_ARGUMENT_EXPRESSION_LIST(b, 0);
    }
    else if (t == C_ASSIGNMENT_EXPRESSION) {
      r = C_ASSIGNMENT_EXPRESSION(b, 0);
    }
    else if (t == C_ASSIGNMENT_OPERATOR) {
      r = C_ASSIGNMENT_OPERATOR(b, 0);
    }
    else if (t == C_ATOMIC_TYPE_SPECIFIER) {
      r = C_ATOMIC_TYPE_SPECIFIER(b, 0);
    }
    else if (t == C_BLOCK_ITEM) {
      r = C_BLOCK_ITEM(b, 0);
    }
    else if (t == C_BLOCK_ITEM_LIST) {
      r = C_BLOCK_ITEM_LIST(b, 0);
    }
    else if (t == C_CAST_EXPRESSION) {
      r = C_CAST_EXPRESSION(b, 0);
    }
    else if (t == C_COMPOUND_STATEMENT) {
      r = C_COMPOUND_STATEMENT(b, 0);
    }
    else if (t == C_CONDITIONAL_EXPRESSION) {
      r = C_CONDITIONAL_EXPRESSION(b, 0);
    }
    else if (t == C_CONSTANT) {
      r = C_CONSTANT(b, 0);
    }
    else if (t == C_CONSTANT_EXPRESSION) {
      r = C_CONSTANT_EXPRESSION(b, 0);
    }
    else if (t == C_DECLARATION) {
      r = C_DECLARATION(b, 0);
    }
    else if (t == C_DECLARATION_LIST) {
      r = C_DECLARATION_LIST(b, 0);
    }
    else if (t == C_DECLARATION_SPECIFIERS) {
      r = C_DECLARATION_SPECIFIERS(b, 0);
    }
    else if (t == C_DECLARATOR) {
      r = C_DECLARATOR(b, 0);
    }
    else if (t == C_DESIGNATION) {
      r = C_DESIGNATION(b, 0);
    }
    else if (t == C_DESIGNATOR) {
      r = C_DESIGNATOR(b, 0);
    }
    else if (t == C_DESIGNATOR_LIST) {
      r = C_DESIGNATOR_LIST(b, 0);
    }
    else if (t == C_DIRECT_ABSTRACT_DECLARATOR) {
      r = C_DIRECT_ABSTRACT_DECLARATOR(b, 0);
    }
    else if (t == C_DIRECT_DECLARATOR) {
      r = C_DIRECT_DECLARATOR(b, 0);
    }
    else if (t == C_END) {
      r = C_END(b, 0);
    }
    else if (t == C_ENUMERATION_CONSTANT) {
      r = C_ENUMERATION_CONSTANT(b, 0);
    }
    else if (t == C_ENUMERATOR) {
      r = C_ENUMERATOR(b, 0);
    }
    else if (t == C_ENUMERATOR_LIST) {
      r = C_ENUMERATOR_LIST(b, 0);
    }
    else if (t == C_ENUM_SPECIFIER) {
      r = C_ENUM_SPECIFIER(b, 0);
    }
    else if (t == C_EQUALITY_EXPRESSION) {
      r = C_EQUALITY_EXPRESSION(b, 0);
    }
    else if (t == C_EXCLUSIVE_OR_EXPRESSION) {
      r = C_EXCLUSIVE_OR_EXPRESSION(b, 0);
    }
    else if (t == C_EXPRESSION) {
      r = C_EXPRESSION(b, 0);
    }
    else if (t == C_EXPRESSION_STATEMENT) {
      r = C_EXPRESSION_STATEMENT(b, 0);
    }
    else if (t == C_EXTERNAL_DECLARATION) {
      r = C_EXTERNAL_DECLARATION(b, 0);
    }
    else if (t == C_FUNCTION_DEFINITION) {
      r = C_FUNCTION_DEFINITION(b, 0);
    }
    else if (t == C_FUNCTION_SPECIFIER) {
      r = C_FUNCTION_SPECIFIER(b, 0);
    }
    else if (t == C_GENERIC_ASSOCIATION) {
      r = C_GENERIC_ASSOCIATION(b, 0);
    }
    else if (t == C_GENERIC_ASSOC_LIST) {
      r = C_GENERIC_ASSOC_LIST(b, 0);
    }
    else if (t == C_GENERIC_SELECTION) {
      r = C_GENERIC_SELECTION(b, 0);
    }
    else if (t == C_IDENTIFIER_LIST) {
      r = C_IDENTIFIER_LIST(b, 0);
    }
    else if (t == C_INCLUSIVE_OR_EXPRESSION) {
      r = C_INCLUSIVE_OR_EXPRESSION(b, 0);
    }
    else if (t == C_INITIALIZER) {
      r = C_INITIALIZER(b, 0);
    }
    else if (t == C_INITIALIZER_LIST) {
      r = C_INITIALIZER_LIST(b, 0);
    }
    else if (t == C_INIT_DECLARATOR) {
      r = C_INIT_DECLARATOR(b, 0);
    }
    else if (t == C_INIT_DECLARATOR_LIST) {
      r = C_INIT_DECLARATOR_LIST(b, 0);
    }
    else if (t == C_ITERATION_STATEMENT) {
      r = C_ITERATION_STATEMENT(b, 0);
    }
    else if (t == C_JUMP_STATEMENT) {
      r = C_JUMP_STATEMENT(b, 0);
    }
    else if (t == C_LABELED_STATEMENT) {
      r = C_LABELED_STATEMENT(b, 0);
    }
    else if (t == C_LOGICAL_AND_EXPRESSION) {
      r = C_LOGICAL_AND_EXPRESSION(b, 0);
    }
    else if (t == C_LOGICAL_OR_EXPRESSION) {
      r = C_LOGICAL_OR_EXPRESSION(b, 0);
    }
    else if (t == C_MULTIPLICATIVE_EXPRESSION) {
      r = C_MULTIPLICATIVE_EXPRESSION(b, 0);
    }
    else if (t == C_PARAMETER_DECLARATION) {
      r = C_PARAMETER_DECLARATION(b, 0);
    }
    else if (t == C_PARAMETER_LIST) {
      r = C_PARAMETER_LIST(b, 0);
    }
    else if (t == C_PARAMETER_TYPE_LIST) {
      r = C_PARAMETER_TYPE_LIST(b, 0);
    }
    else if (t == C_POINTER) {
      r = C_POINTER(b, 0);
    }
    else if (t == C_POSTFIX_EXPRESSION) {
      r = C_POSTFIX_EXPRESSION(b, 0);
    }
    else if (t == C_PRIMARY_EXPRESSION) {
      r = C_PRIMARY_EXPRESSION(b, 0);
    }
    else if (t == C_RELATIONAL_EXPRESSION) {
      r = C_RELATIONAL_EXPRESSION(b, 0);
    }
    else if (t == C_SELECTION_STATEMENT) {
      r = C_SELECTION_STATEMENT(b, 0);
    }
    else if (t == C_SHIFT_EXPRESSION) {
      r = C_SHIFT_EXPRESSION(b, 0);
    }
    else if (t == C_SPECIFIER_QUALIFIER_LIST) {
      r = C_SPECIFIER_QUALIFIER_LIST(b, 0);
    }
    else if (t == C_STATEMENT) {
      r = C_STATEMENT(b, 0);
    }
    else if (t == C_STATIC_ASSERT_DECLARATION) {
      r = C_STATIC_ASSERT_DECLARATION(b, 0);
    }
    else if (t == C_STORAGE_CLASS_SPECIFIER) {
      r = C_STORAGE_CLASS_SPECIFIER(b, 0);
    }
    else if (t == C_STRING) {
      r = C_STRING(b, 0);
    }
    else if (t == C_STRUCT_DECLARATION) {
      r = C_STRUCT_DECLARATION(b, 0);
    }
    else if (t == C_STRUCT_DECLARATION_LIST) {
      r = C_STRUCT_DECLARATION_LIST(b, 0);
    }
    else if (t == C_STRUCT_DECLARATOR) {
      r = C_STRUCT_DECLARATOR(b, 0);
    }
    else if (t == C_STRUCT_DECLARATOR_LIST) {
      r = C_STRUCT_DECLARATOR_LIST(b, 0);
    }
    else if (t == C_STRUCT_OR_UNION) {
      r = C_STRUCT_OR_UNION(b, 0);
    }
    else if (t == C_STRUCT_OR_UNION_SPECIFIER) {
      r = C_STRUCT_OR_UNION_SPECIFIER(b, 0);
    }
    else if (t == C_TYPE_NAME) {
      r = C_TYPE_NAME(b, 0);
    }
    else if (t == C_TYPE_QUALIFIER) {
      r = C_TYPE_QUALIFIER(b, 0);
    }
    else if (t == C_TYPE_QUALIFIER_LIST) {
      r = C_TYPE_QUALIFIER_LIST(b, 0);
    }
    else if (t == C_TYPE_SPECIFIER) {
      r = C_TYPE_SPECIFIER(b, 0);
    }
    else if (t == C_UNARY_EXPRESSION) {
      r = C_UNARY_EXPRESSION(b, 0);
    }
    else if (t == C_UNARY_OPERATOR) {
      r = C_UNARY_OPERATOR(b, 0);
    }
    else if (t == DEF_BEGIN) {
      r = DEF_BEGIN(b, 0);
    }
    else if (t == DEF_DEFINITION) {
      r = DEF_DEFINITION(b, 0);
    }
    else if (t == DEF_KEY) {
      r = DEF_KEY(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return ROOT(b, l + 1);
  }

  /* ********************************************************** */
  // C_POINTER C_DIRECT_ABSTRACT_DECLARATOR
  // 	| C_POINTER	| C_DIRECT_ABSTRACT_DECLARATOR
  public static boolean C_ABSTRACT_DECLARATOR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "C_ABSTRACT_DECLARATOR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, C_ABSTRACT_DECLARATOR, "<c abstract declarator>");
    r = C_ABSTRACT_DECLARATOR_0(b, l + 1);
    if (!r) r = C_POINTER(b, l + 1);
    if (!r) r = C_DIRECT_ABSTRACT_DECLARATOR(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
